<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libpointmatcher_demo</name>
  <version>0.0.0</version>
  <description>demo package for using libpointmatcher library in ros2 humble. </description>
  <maintainer email="nikola.banovic@posidonia-technology.hr">Nikola Banovic</maintainer>
  <license>Copyright (c) 2024, Posidonia Technology d.o.o.</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
